[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Player/BulletTime.gd" type="Script" id=1]

[node name="BulletTime" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CoolDown" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CoolDown" to="." method="_on_CoolDown_timeout"]
